[tool.poetry]
name = "steev-docs"
version = "0.1.0"
description = "Steev documentation"
authors = ["psycoder-sup <psycoder@steev.io>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"
mkdocs-dracula-theme = "^1.0.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.9"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
